fixed alignment

--- a/style.css
+++ b/style.css
@@ -66,14 +66,14 @@
      cursor: pointer;
      /* display: inline-block; */
      /* width: fit-content; */
-     */ justify-content: space-between;
+     justify-content: space-between;
      /* max-width: 60vw; */
      background-color: rgb(229, 9, 20);
      border-radius: 5px;
 
 
  }
-
+ 
  .english {
     color: white;
     border: 1px solid gray;
@@ -83,6 +83,7 @@
      background-color: rgba(23, 23, 23, 0.7);
      padding: 7px 40px 9px 11px;
      border-radius: 5px;
+     text-align: center;
 
  }
 
@@ -137,6 +138,8 @@
     /* width: 100%; */
      /* text-align: left; */
      display: flex;
+    
+justify-content: center;
      position: relative;
      font-family: sans-serif;
      gap: 5px;
